# vector_db_from_scratch

./: .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench2.cpp  bench_ktree.cpp  bench_linear.cpp  bench_main.cpp  dataset_loader.cpp  dataset_loader.h  metrics.h
cmake/: pybind11.cmake
core/: CMakeLists.txt  distance.cpp  distance.h  simd.cpp  simd.h  types.h  vector.cpp  vector.h  vector_block.h
indexes/: CMakeLists.txt  ivf.cpp  ivf.h  kd_tree.cpp  kd_tree.h  linear_scan.cpp  linear_scan.h
tools/: CMakeLists.txt  generate_synthetic_dataset.cpp
